--- a/03-Authentication-Authorization/03-spring-boot-oauth2/src/main/resources/static/index.html
+++ b/03-Authentication-Authorization/03-spring-boot-oauth2/src/main/resources/static/index.html
@@ -12,15 +12,15 @@
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/webjars/js-cookie/js.cookie.js"></script>
     <script type="text/javascript">
-        $.get("/user", function (data) {
-            $("#user").html(data.name);
+        $.get("/customUser", function (data) {
+            $("#customUser").html(data.name);
             $(".unauthenticated").hide()
             $(".authenticated").show()
         });
 
         var logout = function() {
             $.post("/logout", function() {
-                $("#user").html('');
+                $("#customUser").html('');
                 $(".unauthenticated").show();
                 $(".authenticated").hide();
             })
@@ -49,7 +49,7 @@
         With GitHub: <a href="/oauth2/authorization/github">click here</a>
     </div>
     <div class="container authenticated">
-        Logged in as: <span id="user"></span>
+        Logged in as: <span id="customUser"></span>
         <div>
             <button onClick="logout()" class="btn btn-primary">Logout</button>
         </div>
